_sources/user-guide/0.8/index.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
.. or more contributor license agreements.  See the NOTICE file
.. distributed with this work for additional information
.. regarding copyright ownership.  The ASF licenses this file
.. to you under the Apache License, Version 2.0 (the
.. "License"); you may not use this file except in compliance
.. with the License.  You may obtain a copy of the License at

..   http://www.apache.org/licenses/LICENSE-2.0

.. Unless required by applicable law or agreed to in writing,
.. software distributed under the License is distributed on an
.. "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
.. KIND, either express or implied.  See the License for the
.. specific language governing permissions and limitations
.. under the License.

.. image:: /_static/images/DataFusionComet-Logo-Light.png
  :alt: DataFusion Comet Logo

=======================
Comet 0.8.x User Guide
=======================

.. _toc.user-guide-links-0.8.0:
.. toctree::
   :maxdepth: 1
   :caption: Comet 0.8.0 User Guide

   Installing Comet <installation>
   Building From Source <source>
   Supported Data Sources <datasources>
   Supported Data Types <datatypes>
   Supported Operators <operators>
   Supported Expressions <expressions>
   Configuration Settings <configs>
   Compatibility Guide <compatibility>
   Tuning Guide <tuning>
   Metrics Guide <metrics>
   Iceberg Guide <iceberg>
   Kubernetes Guide <kubernetes>
